--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 sudo: required
+language: bash
+addons:
+  apt:
+    update: true
+    packages:
+    - docker-ce
+    - wget
 services:
   - docker
-language: bash
 script:
-  - curl -sSL https://get.docker.com | sh
-  - mkdir -p ~/.docker
-  - echo '{ "experimental": "enabled" }' > ~/.docker/config.json
-  - docker version
-  # prepare qemu
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
   # build image
   - docker build -t rpi-jupyter ./jupyter
