--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,10 +1,18 @@
-FROM arm32v7/python:3.7.1-stretch
+FROM alpine:latest AS builder
 
-ARG NUM_CORES=4 \
-	OPENCV_VERSION=3.4.4 \
-	FFMPEG_VERSION=n4.1 \
-	GSL_VERSION=2.5 \
-	VLFEAT_VERSION=0.9.21
+RUN apk add --no-cache curl \
+ && while [ "$QEMU_DOWNLOAD_URL" == "" ] ; do QEMU_DOWNLOAD_URL=$(curl -s https://api.github.com/repos/multiarch/qemu-user-static/releases/latest | grep "browser_download_url" | grep "\/qemu-arm-static.tar.gz" | cut -d\" -f4) ; done \
+ && curl --retry 3 -L -s -o /tmp/qemu-arm-static.tar.gz $QEMU_DOWNLOAD_URL \
+ && tar xzf /tmp/qemu-arm-static.tar.gz -C /tmp
+
+FROM arm32v7/python:3.7.1-stretch
+COPY --from=builder /tmp/qemu-arm-static /usr/bin
+
+ARG NUM_CORES=4
+ARG OPENCV_VERSION=3.4.4
+ARG FFMPEG_VERSION=n4.1
+ARG GSL_VERSION=2.5
+ARG VLFEAT_VERSION=0.9.21
 
 ENV DEBIAN_FRONTEND=noninteractive \
 	LANG=C.UTF-8 \
@@ -12,9 +20,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
 	PATH=/opt/conda/bin:$PATH \
 	NOTEBOOK_DIR=/src/notebooks \
 	NOTEBOOK_IP=0.0.0.0 \
-	NOTEBOOK_PORT=8888 \
-
-USER root
+	NOTEBOOK_PORT=8888
 
 RUN apt-get update -qq \
  && apt-get upgrade -y \
@@ -25,23 +31,26 @@ RUN apt-get update -qq \
 	imagemagick \
 # opencv3 requirements
 	libgtk2.0-dev libavcodec-dev libavformat-dev libswscale-dev \
-	libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev \
+	libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libdc1394-22-dev \
+# libjasper-dev
 # opencv3 extra
-	libtiff5-dev libgstreamer0.10-dev libgstreamer-plugins-base0.10-dev \
+	libtiff5-dev \
 	libv4l-dev v4l-utils libmp3lame-dev \
 	libboost-all-dev libeigen3-dev \
-	libpng12-dev libglib2.0-0 libxext6 libsm6 libxrender1 libxvidcore-dev libx264 libatlas-base-dev gfortran \
+# libgstreamer0.10-dev libgstreamer-plugins-base0.10-dev
+	libglib2.0-0 libxext6 libsm6 libxrender1 libxvidcore-dev libatlas-base-dev gfortran \
+# libpng12-dev libx264
 \
  && cd /tmp \
  && wget -O ffmpeg.tar.gz https://github.com/FFmpeg/FFmpeg/archive/${FFMPEG_VERSION}.tar.gz \
  && tar -zxvf ffmpeg.tar.gz \
- && wget -O opencv.zip https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.tar.gz \
+ && wget -O opencv.tar.gz https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.tar.gz \
  && tar -zxvf opencv.tar.gz \
- && wget -O opencv_contrib.zip https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz \
+ && wget -O opencv_contrib.tar.gz https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz \
  && tar -zxvf opencv_contrib.tar.gz \
 \
 # build ffmpeg
- && cd /tmp/ffmpeg \
+ && cd /tmp/FFmpeg-${FFMPEG_VERSION} \
  && ./configure --enable-shared --disable-static --enable-nonfree \
  && make -j ${NUM_CORES} \
  && make install \
@@ -50,7 +59,7 @@ RUN apt-get update -qq \
 # build opencv
  && pip --no-cache-dir install \
 	numpy scipy \
- && cd /tmp/opencv \
+ && cd /tmp/opencv-${OPENCV_VERSION} \
  && mkdir build \
  && cd build \
  && cmake \
@@ -63,7 +72,7 @@ RUN apt-get update -qq \
 	-D INSTALL_PYTHON_EXAMPLES=ON \
 	-D BUILD_EXAMPLES=ON \
 	-D BUILD_DOCS=ON \
-	-D OPENCV_EXTRA_MODULES_PATH=/tmp/opencv_contrib/modules \
+	-D OPENCV_EXTRA_MODULES_PATH=/tmp/opencv_contrib-${OPENCV_VERSION}/modules \
 	-D WITH_XIMEA=YES \
 #	-D WITH_QT=YES \
 	-D WITH_FFMPEG=YES \
@@ -102,6 +111,7 @@ RUN apt-get update -qq \
 \
 # fix libdc1394 error: Failed to initialize libdc1394
  && ln /dev/null /dev/raw1394 \
+ && mkdir -p /etc/udev/rules.d/ \
  && echo 'KERNEL=="raw1394", GROUP="video"' > /etc/udev/rules.d/raw1394.rules \
 \
  && ldconfig \
